--- a/charts/kafka/application.yml
+++ b/charts/kafka/application.yml
@@ -5,12 +5,10 @@ metadata:
   namespace: argocd
 spec:
   project: default
-  source:
-    chart: kafka
-    repoURL: https://charts.bitnami.com/bitnami
-    targetRevision: 30.1.2
-    helm:
-      releaseName: kafka
   destination:
     server: "https://kubernetes.default.svc"
     namespace: stock-tracker
+  sources:
+  - chart: kafka
+    repoURL: https://charts.bitnami.com/bitnami
+    targetRevision: 30.1.2
