--- a/charts/kafka/application.yml
+++ b/charts/kafka/application.yml
@@ -12,3 +12,5 @@ spec:
   - chart: kafka
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 30.1.2
+    valuesFiles:
+    - values.yml
