--- a/charts/kafka/Charts.yml
+++ b/charts/kafka/Charts.yml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: kafka
-  namespace: argocd
+  namespace: stock-price-tracker
 spec:
   project: stock-price-tracker
   destination:
