--- a/charts/kafka/Charts.yml
+++ b/charts/kafka/Charts.yml
@@ -12,5 +12,6 @@ spec:
   - chart: kafka
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 30.1.2
-    valuesFiles:
-    - values.yml
+    helm:
+      valuesFiles:
+      - values.yml
