--- a/charts/kafka/Charts.yml
+++ b/charts/kafka/Charts.yml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: kafka-app
+  name: kafka
   namespace: stock-price-tracker
 spec:
   project: stock-price-tracker
