--- a/charts/kafka/Charts.yml
+++ b/charts/kafka/Charts.yml
@@ -13,5 +13,5 @@ spec:
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 30.1.2
     helm:
-      valuesFiles:
+      valueFiles:
       - values.yml
