--- a/charts/kafka/Charts.yaml
+++ b/charts/kafka/Charts.yaml
@@ -12,3 +12,6 @@ spec:
   - chart: kafka
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 30.1.2
+    helm:
+      valueFiles:
+      - charts/kafka/values.yaml
