--- a/argo-apps/applicationset.yaml
+++ b/argo-apps/applicationset.yaml
@@ -2,7 +2,6 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: applicationset
-  namespace: argocd
 spec:
   generators:
     - git:
@@ -25,4 +24,4 @@ spec:
         path: '{{path}}'
       destination:
         server: https://kubernetes.default.svc
-        namespace: {{index .path.segments 2}}
+        namespace: '{{index .path.segments 2}}'
