--- a/argo-apps/templates/kafka/Chart.yaml
+++ b/argo-apps/templates/kafka/Chart.yaml
@@ -1,30 +1,8 @@
-annotations:
-  category: Infrastructure
-  images: |
-    - name: jmx-exporter
-      image: docker.io/bitnami/jmx-exporter:0.20.0-debian-12-r17
-    - name: kafka
-      image: docker.io/bitnami/kafka:3.7.0-debian-12-r6
-    - name: kafka-exporter
-      image: docker.io/bitnami/kafka-exporter:1.7.0-debian-12-r27
-    - name: kubectl
-      image: docker.io/bitnami/kubectl:1.30.1-debian-12-r0
-    - name: os-shell
-      image: docker.io/bitnami/os-shell:12-debian-12-r21
-  licenses: Apache-2.0
 apiVersion: v2
 appVersion: 3.7.0
-dependencies:
-  - condition: zookeeper.enabled
-    name: zookeeper
-    repository: oci://registry-1.docker.io/bitnamicharts
-    version: 13.x.x
-  - name: common
-    repository: oci://registry-1.docker.io/bitnamicharts
-    tags:
-      - bitnami-common
-    version: 2.x.x
 name: kafka
-sources:
-  - https://github.com/bitnami/charts/tree/main/bitnami/kafka
-version: 30.1.2
+version: 0.0.1
+dependencies:
+- name: kafka
+  repository: https://charts.bitnami.com/bitnami
+  version: 30.1.2
