--- a/argo-apps/templates/kafka/Chart.yaml
+++ b/argo-apps/templates/kafka/Chart.yaml
@@ -4,5 +4,5 @@ name: kafka
 version: 0.0.1
 dependencies:
 - name: kafka
-  repository: oci://registry-1.docker.io/bitnamicharts/kafka
+  repository: oci://registry-1.docker.io/bitnamicharts
   version: 30.1.2
