--- a/argo-apps/applicationset.yaml
+++ b/argo-apps/applicationset.yaml
@@ -22,6 +22,9 @@ spec:
         repoURL: https://github.com/flaxinger/stock-price-tracker
         targetRevision: main
         path: '{{path}}'
+        helm:
+          valueFiles:
+          - values.yaml
       destination:
         server: https://kubernetes.default.svc
         namespace: stock-price-tracker
