--- a/argo-apps/applicationset.yaml
+++ b/argo-apps/applicationset.yaml
@@ -24,7 +24,7 @@ spec:
         path: '{{path}}'
         helm:
           valueFiles:
-          - values.yaml
+          - ./values.yaml
       destination:
         server: https://kubernetes.default.svc
         namespace: stock-price-tracker
