--- a/argo-apps/templates/kafka/values.yaml
+++ b/argo-apps/templates/kafka/values.yaml
@@ -89,7 +89,7 @@ diagnosticMode:
 image:
   registry: docker.io
   repository: bitnami/kafka
-  tag: 3.8.0-debian-12-r5
+  tag: 3.7.1-debian-12-r2
   digest: ""
   ## Specify a imagePullPolicy
   ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
@@ -125,11 +125,6 @@ extraConfig: |
   default.replication.factor = 1
   delete.topic.enable = true
   auto.create.topics.enable = false
-## @param extraConfigYaml Additional configuration in yaml format to be appended at the end of the generated Kafka configuration file.
-##
-## E.g.
-## extraConfigYaml:
-##   default.replication.factor: 3
 ##
 extraConfigYaml: {}
 ## @param secretConfig Additional configuration to be appended at the end of the generated Kafka configuration file.
@@ -207,7 +202,7 @@ listeners:
   ## extraListeners:
   ##  - name: CUSTOM
   ##    containerPort: 9097
-  ##    protocol: PLAINTEXT
+  ##    protocol: SASL_PLAINTEXT
   ##    sslClientAuth: ""
   ##
   extraListeners: []
@@ -313,7 +308,7 @@ tls:
   ## When using 'pem' format for certificates, each secret should contain a public CA certificate, a public certificate and one private key.
   ## Create these secrets following the steps below:
   ## 1) Create a certificate key and signing request per Kafka broker, and sign the signing request with your CA
-  ## 2) Rename your CA file to `kafka-ca.crt`.
+  ## 2) Rename your CA file to `kafka.ca.crt`.
   ## 3) Rename your certificates to `kafka-X.tls.crt` where X is the ID of each Kafka broker.
   ## 3) Rename your keys to `kafka-X.tls.key` where X is the ID of each Kafka broker.
   ## 4) Run the command below one time per broker to create its associated secret (SECRET_NAME_X is the name of the secret you want to create):
@@ -1518,7 +1513,7 @@ externalAccess:
     image:
       registry: docker.io
       repository: bitnami/kubectl
-      tag: 1.31.1-debian-12-r1
+      tag: 1.30.3-debian-12-r0
       digest: ""
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
@@ -1770,9 +1765,6 @@ networkPolicy:
   ## @param networkPolicy.allowExternalEgress Allow the pod to access any range of port and all destinations.
   ##
   allowExternalEgress: true
-  ## @param networkPolicy.addExternalClientAccess Allow access from pods with client label set to "true". Ignored if `networkPolicy.allowExternal` is true.
-  ##
-  addExternalClientAccess: true
   ## @param networkPolicy.extraIngress [array] Add extra ingress rules to the NetworkPolicy
   ## e.g:
   ## extraIngress:
@@ -1806,14 +1798,8 @@ networkPolicy:
   ##                   - frontend
   ##
   extraEgress: []
-  ## @param networkPolicy.ingressPodMatchLabels [object] Labels to match to allow traffic from other pods. Ignored if `networkPolicy.allowExternal` is true.
-  ## e.g:
-  ## ingressPodMatchLabels:
-  ##   my-client: "true"
-  #
-  ingressPodMatchLabels: {}
-  ## @param networkPolicy.ingressNSMatchLabels [object] Labels to match to allow traffic from other namespaces. Ignored if `networkPolicy.allowExternal` is true.
-  ## @param networkPolicy.ingressNSPodMatchLabels [object] Pod labels to match to allow traffic from other namespaces. Ignored if `networkPolicy.allowExternal` is true.
+  ## @param networkPolicy.ingressNSMatchLabels [object] Labels to match to allow traffic from other namespaces
+  ## @param networkPolicy.ingressNSPodMatchLabels [object] Pod labels to match to allow traffic from other namespaces
   ##
   ingressNSMatchLabels: {}
   ingressNSPodMatchLabels: {}
@@ -1837,7 +1823,7 @@ volumePermissions:
   image:
     registry: docker.io
     repository: bitnami/os-shell
-    tag: 12-debian-12-r30
+    tag: 12-debian-12-r25
     digest: ""
     pullPolicy: IfNotPresent
     ## Optionally specify an array of imagePullSecrets.
@@ -1845,7 +1831,7 @@ volumePermissions:
     ## ref: https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/
     ## Example:
     ## pullSecrets:
-    ##   - myRegistryKeySecretName
+    ##   - myRegi:stryKeySecretName
     ##
     pullSecrets: []
   ## Init container resource requests and limits
@@ -1903,7 +1889,7 @@ rbac:
   ## binding Kafka ServiceAccount to a role
   ## that allows Kafka pods querying the K8s API
   ##
-  create: false
+  create: true
 ## @section Metrics parameters
 ##
 
@@ -1931,7 +1917,7 @@ metrics:
     image:
       registry: docker.io
       repository: bitnami/jmx-exporter
-      tag: 1.0.1-debian-12-r6
+      tag: 1.0.1-debian-12-r2
       digest: ""
       ## Specify a imagePullPolicy
       ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
@@ -2150,7 +2136,7 @@ provisioning:
   ##   --command-config $CLIENT_CONF
   ##   --add
   ##   --allow-principal User:user
-  ##   --consumer --topic *
+  ##   --consumer --topic '*'
   ## - "/opt/bitnami/kafka/bin/kafka-acls.sh
   ##      --bootstrap-server $KAFKA_SERVICE
   ##      --command-config $CLIENT_CONF
@@ -2451,4 +2437,3 @@ externalZookeeper:
   ## @param externalZookeeper.servers List of external zookeeper servers to use. Typically used in combination with 'zookeeperChrootPath'. Must be empty if you use KRaft mode.
   ##
   servers: []
-
