--- a/argo-apps/templates/kafka/pv.yml
+++ b/argo-apps/templates/kafka/pv.yml
@@ -1,19 +1,19 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-broker-0
+  name: kafka-controller-0
   labels:
-    app: kafka-broker-0
+    app: kafka-controller-0
 spec:
   accessModes:
   - ReadWriteOnce
   hostPath:
-    path: "/data/kafka/broker-0"
+    path: "/data/kafka/controller-0"
   capacity:
     storage: 8Gi
   persistentVolumeReclaimPolicy: Recycle
   claimRef:
-    name: data-kafka-broker-0
+    name: data-kafka-controller-0
     namespace: stock-price-tracker
 
 ---
@@ -21,19 +21,19 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-broker-1
+  name: kafka-controller-1
   labels:
-    app: kafka-broker-1
+    app: kafka-controller-1
 spec:
   accessModes:
   - ReadWriteOnce
   hostPath:
-    path: "/data/kafka/broker-1"
+    path: "/data/kafka/controller-1"
   capacity:
     storage: 8Gi
   persistentVolumeReclaimPolicy: Recycle
   claimRef:
-    name: data-kafka-broker-1
+    name: data-kafka-controller-1
     namespace: stock-price-tracker
 
 ---
@@ -41,19 +41,19 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-broker-2
+  name: kafka-controller-2
   labels:
-    app: kafka-broker-2
+    app: kafka-controller-2
 spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/data/kafka/broker-2"
+    path: "/data/kafka/controller-2"
   capacity:
     storage: 8Gi
   persistentVolumeReclaimPolicy: Recycle
   claimRef:
-    name: data-kafka-broker-2
+    name: data-kafka-controller-2
     namespace: stock-price-tracker
 
 ---
