--- a/argo-apps/templates/kafka/pv.yml
+++ b/argo-apps/templates/kafka/pv.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-controller-0
+  name: kafka-broker-0
   labels:
-    app: kafka-controller-0
+    app: kafka-broker-0
 spec:
   accessModes:
   - ReadWriteOnce
@@ -13,7 +13,7 @@ spec:
     storage: 8Gi
   persistentVolumeReclaimPolicy: Recycle
   claimRef:
-    name: data-kafka-controller-0
+    name: data-kafka-broker-0
     namespace: stock-price-tracker
 
 ---
@@ -21,9 +21,9 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: kafka-controller-1
+  name: kafka-broker-1
   labels:
-    app: kafka-controller-1
+    app: kafka-broker-1
 spec:
   accessModes:
   - ReadWriteOnce
@@ -33,27 +33,7 @@ spec:
     storage: 8Gi
   persistentVolumeReclaimPolicy: Recycle
   claimRef:
-    name: data-kafka-controller-1
-    namespace: stock-price-tracker
-
----
-
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: kafka-controller-2
-  labels:
-    app: kafka-controller-2
-spec:
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: "/data/kafka/controller-2"
-  capacity:
-    storage: 8Gi
-  persistentVolumeReclaimPolicy: Recycle
-  claimRef:
-    name: data-kafka-controller-2
+    name: data-kafka-broker-1
     namespace: stock-price-tracker
 
 ---
