--- a/argo-apps/templates/kafka/values.yaml
+++ b/argo-apps/templates/kafka/values.yaml
@@ -7,6 +7,8 @@ kafka:
     resourcesPreset: large
   externalAccess:
     enabled: true
+    autoDiscovery:
+      enabled: true
   extraConfig: |
     max.message.bytes = 1048576
     offsets.topic.replication.factor = 1
