--- a/argo-apps/templates/kafka-ui/Chart.yaml
+++ b/argo-apps/templates/kafka-ui/Chart.yaml
@@ -1,8 +1,7 @@
 apiVersion: v2
 appVersion: 3.7.0
-name: kafka
+name: kafka-ui
 version: 0.0.1
 dependencies:
 - name: kafka-ui
-  repository: oci://registry-1.docker.io/bitnamicharts
-  version: 29.3.10
+  version: 1.4.5
