--- a/argo-apps/templates/kafka-ui/Chart.yaml
+++ b/argo-apps/templates/kafka-ui/Chart.yaml
@@ -4,4 +4,5 @@ name: kafka-ui
 version: 0.0.1
 dependencies:
 - name: kafka-ui
+  repository: https://provectus.github.io/kafka-ui
   version: 1.4.5
